# 2d-platformer-demo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
example/Demo/: CMakeLists.txt  Game.hpp  Main.cpp
include/GameEngine/: Camera.hpp  ConvexBoundingPolygon.hpp  Geometry.hpp  HorizontalDirection.hpp  Renderable.hpp
include/GameEngine/Physics/: DynamicObject.hpp  Integrator.hpp  JumpAndRunObject.hpp  Object.hpp  StaticObject.hpp
include/GameEngine/SDL2/: Error.hpp  UniquePointer.hpp
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  ConvexBoundingPolygon.cpp  ConvexBoundingPolygon.hpp  Game.cpp  Game.hpp  GameCharacter.cpp  GameCharacter.hpp  Geometry.cpp  Geometry.hpp  HorizontalDirection.hpp  Main.cpp  Math.cpp  Math.hpp  PhysicalObject.cpp  PhysicalObject.hpp  PhysicsObject.hpp  Polygon.cpp  Polygon.hpp  PolygonDemo.cpp  PolygonDemo.hpp  PolygonEdge.cpp  PolygonEdge.hpp  PolygonObject.cpp  PolygonObject.hpp  RectangleObject.cpp  RectangleObject.hpp  Renderable.hpp  StaticObject.cpp  StaticObject.hpp
src/Physics/: DynamicObject.cpp  DynamicObject.hpp  Integrator.cpp  Integrator.hpp  JumpAndRunObject.cpp  JumpAndRunObject.hpp  Object.hpp  StaticObject.cpp  StaticObject.hpp
src/SDL2/: Error.cpp  Error.hpp  UniquePointer.hpp
test/: CMakeLists.txt  Collision.cpp  ConvexBoundingPolygon.cpp  Geometry.cpp  Main.cpp  Math.cpp
test/Physics/: Integrator.cpp
